--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -469,7 +469,7 @@ mark,
 .blockquote-footer {
   display: block;
   font-size: 80%;
-  color: #6c757d;
+  color: #d36c5f;
 }
 
 .blockquote-footer::before {
